# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2020-04-07 Michael Truog   <mjtruog at protonmail dot com>

    * Improve remote_console cloudi executable command

2020-04-06 Michael Truog   <mjtruog at protonmail dot com>

    * Ignore both visible and hidden nodetool nodes
      (used by the cloudi executable script)
    * Update cpg

2020-04-05 Michael Truog   <mjtruog at protonmail dot com>

    * Add the CloudI Service API nodes_set listen value
      back with more validation
    * Fix remote_console cloudi executable command

2020-04-01 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_service_shell request handling
      (shell interpretation of exec was previously only
       evaluating the first command)

2020-03-14 Michael Truog   <mjtruog at protonmail dot com>

    * Temporarily remove the CloudI Service API nodes_set listen value
      to instead infer the value from the connect value

2020-03-11 Michael Truog   <mjtruog at protonmail dot com>

    * Improve CloudI Service API nodes_set validation of nodes
    * Update nodefinder

2020-03-10 Michael Truog   <mjtruog at protonmail dot com>

    * Always have CloudI attempt connections with nodes in the nodes list
      upon startup, before node discovery is started
    * Improvements for using the CloudI Service API nodes_set
      listen set to all
    * Update cpg
    * Update nodefinder

2020-03-07 Michael Truog   <mjtruog at protonmail dot com>

    * Add configure argument --with-uuid-variant to switch the
      UUID v1 variant from rfc4122 (default) to ordered
    * Improvements for using the CloudI Service API nodes_set
      listen set to all and connect set to hidden
    * Add CloudI Service API nodes_set options {set, all | local}
      to control the nodes where the set operation occurs
    * Update cpg
    * Update uuid

2020-02-27 Michael Truog   <mjtruog at protonmail dot com>

    * Add Erlang/OTP 23 compatibility
